rename platform package workflows
so they show up next to one another in the UI

--- a/.github/workflows/platform-build.yml
+++ b/.github/workflows/platform-build.yml
@@ -1,4 +1,4 @@
-name: Build platform packages and deploy to -develop/
+name: Platform packages build and deploy to -develop/
 
 on:
   workflow_dispatch:
