--- a/.github/workflows/platform-build.yml
+++ b/.github/workflows/platform-build.yml
@@ -57,6 +57,7 @@ jobs:
           cd support/build
           echo -n "matrix=" >> "$GITHUB_OUTPUT"
           set -o pipefail
+          shopt -s nullglob
           ls ${{inputs.formulae}} | jq -jcRn '[inputs|select(length>0)]' >> "$GITHUB_OUTPUT"
   docker-build:
     runs-on: ubuntu-22.04
