run-name for platform build workflows
Otherwise the workflow run list is a mess, and it's near impossible to see which is which since inputs are not listed anywhere.

Intentionally leaving off the "Platform packages" part at the start, since that's shown as the workflow name right underneath the run-name "title" in the GitHub UI.

--- a/.github/workflows/platform-build.yml
+++ b/.github/workflows/platform-build.yml
@@ -1,4 +1,5 @@
 name: Platform packages build and deploy to -develop/
+run-name: Build ${{ inputs.dry-run == true && 'w/o deploy' || '& deploy' }}${{ inputs.overwrite == true && '(+overwrite)' || '' }} to dist-${{inputs.stack}}-develop/ ${{ inputs.publish == false && 'w/o publishing packages into Composer platform repository' || '' }}
 
 on:
   workflow_dispatch:
